Widgets: QMenu - do not start sloppy menu timer from QMenu API

When QMenu::setCurrentAction starts a timer for closing the menu again.
This causes unexpected behaviour when calling QMenu::setCurrentAction,
as it may unset the current action when this timer fires.

Fixes: QTBUG-138956
Change-Id: Ia4d80455a04453d2e6b173a9d7e7c5df39e696ce
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>